# Arkanoid

./: CMakeLists.txt  README.md
include/: Ball.h  Block.h  Brick.h  Button.h  Game.h  Global.h  Menu.h  Paddle.h  Score.h  Scoreboard.h  Window.h  pch.h
src/: 2dshooter.cpp  Ball.cpp  Block.cpp  Brick.cpp  Button.cpp  Game.cpp  Menu.cpp  Paddle.cpp  Score.cpp  Scoreboard.cpp  Window.cpp
